<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ModelDetailsFragmentTab1">


    <ImageView
        android:id="@+id/carModelImageView"
        android:layout_width="245dp"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:src="@drawable/chooseacar"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/carModelImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:id="@+id/technicalFeaturesLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/power"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <FrameLayout
                    android:layout_marginEnd="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/powerTextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/powerEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="10dp"
                            android:hint="@string/powerDetail"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:textColor="#221E8A" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/powerTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingVertical="10dp"
                        android:visibility="gone"
                        android:textColor="#221E8A"
                        android:textSize="18sp"/>

                </FrameLayout>

            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#29000000"/>


            <LinearLayout
                android:layout_marginTop="6dp"
                android:id="@+id/technicalFeaturesLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/torque"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <FrameLayout
                    android:layout_marginEnd="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/torqueTextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/torqueEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="10dp"
                            android:hint="@string/torqueDetail"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:textColor="#221E8A" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/torqueTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="gone"
                        android:paddingVertical="10dp"
                        android:textColor="#221E8A"
                        android:textSize="18sp"/>

                </FrameLayout>



            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#29000000"/>

            <LinearLayout
                android:layout_marginTop="6dp"
                android:id="@+id/technicalFeaturesLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/production"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <FrameLayout
                    android:layout_marginEnd="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/productionTextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productionEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="10dp"
                            android:hint="@string/productionDetail"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:textColor="#221E8A" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:id="@+id/productionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:visibility="gone"
                        android:paddingVertical="10dp"
                        android:textColor="#221E8A"
                        android:textSize="18sp"/>

                </FrameLayout>


            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="#29000000"/>

            <FrameLayout
                android:id="@+id/detailsFrameLayout"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/detailsTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/detailsTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:hint="@string/write_the_details_of_the_car_model"/>

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/detailsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textColor="#221E8A"
                    android:textSize="16sp"/>

            </FrameLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:id="@+id/saveButton"/>



        </LinearLayout>

    </ScrollView>

</LinearLayout>